--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
+    <link rel="stylesheet" href="assets/css/github.min.css">
+
+    <link rel="stylesheet" href="node_modules/highlightjs-8.9.1/styles/github.css">
+
+    <script src="node_modules/highlightjs-8.9.1/highlight.pack.js"></script>
+
 </head>
 
 <body ng-app="app">
@@ -21,6 +27,8 @@
     <div ui-view></div>
 
     <script src="assets/lib/angular.js"></script>
+
+    <script src="node_modules/angular-highlightjs/angular-highlightjs.js"></script>
 
     <script src="assets/lib/angular-sanitize.min.js"></script>
 
@@ -31,8 +39,6 @@
     <script src="assets/js/mainController.js"></script>
 
     <script src="assets/js/mainFactory.js"></script>
-
-
 
 </body>
 
