finish the automatisation with gulp in gulpjs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title> mdReader </title>
 
-    <!-- build:css css/combined.css -->
+    <!-- build:css /assets/css/combined.css -->
 
     <link rel="stylesheet" href="assets/css/bootstrap.css">
 
@@ -22,7 +22,6 @@
 
     <link rel="stylesheet" href="node_modules/highlightjs-8.9.1/styles/github.css">
 
-    <script src="node_modules/highlightjs-8.9.1/highlight.pack.js"></script>
 
     <!-- endbuild -->
 
@@ -32,7 +31,9 @@
 
     <div ui-view></div>
 
-    <!-- build:js scripts/min.js -->
+    <!-- buid:js scripts/min.js -->
+
+    <script src="node_modules/highlightjs-8.9.1/highlight.pack.js"></script>
 
     <script src="assets/lib/angular.js"></script>
 
