--- a/mdR/index.html
+++ b/mdR/index.html
@@ -10,20 +10,7 @@
 
     <title> mdReader </title>
 
-    <!-- build:css /assets/css/combined.css -->
-
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-
-    <link rel="stylesheet" href="assets/css/index.css">
-
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="assets/css/github.min.css">
-
-    <!--<link rel="stylesheet" href="node_modules/highlightjs-8.9.1/styles/github.css">-->
-
-
-    <!-- endbuild -->
+    <link rel="stylesheet" href="/assets/css/combined.css">
 
 </head>
 
@@ -31,7 +18,6 @@
 
     <div ui-view></div>
 
-    <!-- buid:js scripts/min.js -->
 
     <script src="node_modules/highlightjs-8.9.1/highlight.pack.js"></script>
 
@@ -49,7 +35,6 @@
 
     <script src="assets/js/mainFactory.js"></script>
 
-    <!-- endbuild -->
 
 </body>
 
